--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-*.go linguist-language=go
-*.h linguist-language=c
+*.go  linguist-language=go
+*.h   linguist-language=go
+*.txt linguist-language=go
